2009-02-12  Peter Bloomfield

	* src/balsa-message.h: new member gint BalsaMessage::tab_position,
	the position of the tab for header values.
	* src/balsa-mime-widget.h: new member GtkWidget *
	BalsaMimeWidget::header_widget, pointer to the header widget for
	the message.
	* src/balsa-mime-widget-message.c: (balsa_mime_widget_new_message,
	balsa_mime_widget_new_message_tl, bm_header_widget_new,
	bmwm_set_tabs, add_header_gchar,
	balsa_mime_widget_message_set_headers, bmwm_buffer_set_prefs,
	balsa_mime_widget_message_set_headers_d): set the tab position 6
	pixels beyond the length of the longest header label; set user
	prefs for fonts and colors each time we render a message, in
	case prefs have changed.

2009-02-12  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* configure.in: Added 'eu' (Basque) to ALL_LINGUAS

2009-02-08  Albrecht Dreß

	* libbalsa/rfc2445.[hc]: Implement VCALENDAR and VEVENT objects.
	* src/balsa-mime-widget-vcalendar.[hc]:
	display vevent's, and the stuff for sending a text/calendar reply;
	* src/balsa-mime-widget.c: call functions to display text/calendar
	* src/balsa-print-object-text.[hc]:  support print these parts
	* src/balsa-print-object.c:: call functions to print text/calendar
	* src/balsa-message.c: make text/calendar the preferred part.
	* src/balsa-print-object-default.c: catch missing pixbuf
	* src/Makefile.am, libbalsa/Makefile.am: add new source files

2009-02-07  Albrecht Dreß

	* INSTALL: minimum gtk version upgraded, link cleanup (Incomplete!).
	* configure.in: Check min versions, new option for Mac OS X desktop,
	check for *time_r funcs, remove unnecessary check for iconv
	* src/filter-edit.h, src/balsa-index.c, src/balsa-mblist.c
	* src/mailbox-conf.c, src/filter-edit-dialog.c, src/pref-manager.c
	* src/address-book-config.c, libbalsa/misc.[hc]
	* libbalsa/libbalsa-conf.[hc], libbalsa/address.c, libbalsa/identity.c
	* src/filter-edit-callbacks.c:
	Assume we have Gtk+/glib >= 2.6.0
	* libbalsa/imap/imap_search.c: